@@ -267,6 +267,9 @@ public:
 	STDMETHOD(get_TableMusicVolume)(/*[out, retval]*/ int *pVal);
 	STDMETHOD(put_TableMusicVolume)(/*[in]*/ int newVal);
 
+   STDMETHOD(get_AlphaRampAccuracy)(/*[out, retval]*/ int *pVal);
+   STDMETHOD(put_AlphaRampAccuracy)(/*[in]*/ int newVal);
+
 	/////////////////////////////////////////////
 	PinTable();
 	virtual ~PinTable();
@@ -676,16 +679,16 @@ END_CONNECTION_POINT_MAP()
 
 	LightSource m_Light[MAX_LIGHT_SOURCES];
 	BOOL m_NormalizeNormals;
-    BOOL useReflectionForBalls;
-    BOOL useAA;
+   BOOL useReflectionForBalls;
+   BOOL useAA;
 
-    int ballReflectionStrength;
-    float shadowDirX;
-    float shadowDirY;
+   int ballReflectionStrength;
+   float shadowDirX;
+   float shadowDirY;
 	bool m_Shake;		// Is the "Earthshaker" effect active.  This will affect nudge (ball physics) and the render.
 
 	bool activeLayers[8];
-    bool toggleAllLayers;
+   bool toggleAllLayers;   
 };
 
 #endif // !defined(AFX_PINTABLE_H__D14A2DAB_2984_4FE7_A102_D0283ECE31B4__INCLUDED_)
